--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,19 +6,23 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "bootstrap-table": "^1.24.1",
     "boxicons": "^2.1.4",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "html2canvas": "^1.4.1",
+    "jquery": "^3.7.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-json-view": "^1.21.3",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.10.1",
     "web-vitals": "^4.2.4",
     "xlsx": "^0.18.5"
   },
