--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "cra-template": "1.2.0",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
